--- a/hw02/wget-1.15/util/Makefile
+++ b/hw02/wget-1.15/util/Makefile
@@ -106,8 +106,8 @@ POST_INSTALL = :
 NORMAL_UNINSTALL = :
 PRE_UNINSTALL = :
 POST_UNINSTALL = :
-build_triplet = x86_64-apple-darwin13.0.0
-host_triplet = x86_64-apple-darwin13.0.0
+build_triplet = x86_64-apple-darwin13.1.0
+host_triplet = x86_64-apple-darwin13.1.0
 subdir = util
 DIST_COMMON = $(srcdir)/Makefile.in $(srcdir)/Makefile.am README
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
@@ -254,7 +254,7 @@ CFLAGS =  -O2 -Wall
 COMMENT_IF_NO_POD2MAN = 
 CONFIG_INCLUDE = src/config.h
 CPP = gcc -E
-CPPFLAGS = 
+CPPFLAGS = -I/usr/local/include
 CYGPATH_W = echo
 DEFS = -DHAVE_CONFIG_H
 DEPDIR = .deps
@@ -655,8 +655,8 @@ HAVE_LANGINFO_T_FMT_AMPM = 1
 HAVE_LANGINFO_YESEXPR = 1
 HAVE_LCHMOD = 1
 HAVE_LCHOWN = 1
-HAVE_LIBGNUTLS = 
-HAVE_LIBSSL = yes
+HAVE_LIBGNUTLS = yes
+HAVE_LIBSSL = 
 HAVE_LINK = 1
 HAVE_LINKAT = 1
 HAVE_LONG_LONG_INT = 1
@@ -827,19 +827,19 @@ LDFLAGS =
 LEX = flex
 LEXLIB = -ll
 LEX_OUTPUT_ROOT = lex.yy
-LIBGNUTLS = 
-LIBGNUTLS_PREFIX = 
+LIBGNUTLS = -L/usr/local/lib -lgnutls
+LIBGNUTLS_PREFIX = /usr/local
 LIBGNU_LIBDEPS = 
 LIBGNU_LTLIBDEPS = 
 LIBICONV = -liconv
 LIBINTL = 
 LIBMULTITHREAD = -lpthread
-LIBOBJS =  ${LIBOBJDIR}ftp-opie$U.o ${LIBOBJDIR}openssl$U.o ${LIBOBJDIR}http-ntlm$U.o
+LIBOBJS =  ${LIBOBJDIR}ftp-opie$U.o ${LIBOBJDIR}gnutls$U.o ${LIBOBJDIR}http-ntlm$U.o
 LIBPTH = 
 LIBPTH_PREFIX = 
-LIBS = -lssl -lcrypto -ldl -lz 
+LIBS = -lnettle -L/usr/local/lib -lgnutls -lz 
 LIBSOCKET = 
-LIBSSL = -lssl -lcrypto
+LIBSSL = 
 LIBSSL_PREFIX = 
 LIBTHREAD = 
 LIB_CLOCK_GETTIME = 
@@ -850,13 +850,13 @@ LOCALE_FR = fr_FR.ISO8859-1
 LOCALE_FR_UTF8 = fr_FR.UTF-8
 LOCALE_JA = ja_JP.eucJP
 LOCALE_ZH_CN = zh_CN.GB18030
-LTLIBGNUTLS = 
+LTLIBGNUTLS = -L/usr/local/lib -lgnutls -R/usr/local/lib
 LTLIBICONV = -liconv
 LTLIBINTL = 
 LTLIBMULTITHREAD = -lpthread
-LTLIBOBJS =  ${LIBOBJDIR}ftp-opie$U.lo ${LIBOBJDIR}openssl$U.lo ${LIBOBJDIR}http-ntlm$U.lo
+LTLIBOBJS =  ${LIBOBJDIR}ftp-opie$U.lo ${LIBOBJDIR}gnutls$U.lo ${LIBOBJDIR}http-ntlm$U.lo
 LTLIBPTH = 
-LTLIBSSL = -lssl -lcrypto
+LTLIBSSL = 
 LTLIBTHREAD = 
 MAKEINFO = ${SHELL} /Users/rachel/code/softsys/SoftwareSystems/hw02/wget-1.15/build-aux/missing makeinfo
 MKDIR_P = ../build-aux/install-sh -c -d
@@ -864,7 +864,7 @@ MSGFMT = :
 MSGFMT_015 = :
 MSGMERGE = :
 NETINET_IN_H = 
-NETTLE_LIBS = 
+NETTLE_LIBS = -lnettle
 NEXT_ARPA_INET_H = <arpa/inet.h>
 NEXT_AS_FIRST_DIRECTIVE_ARPA_INET_H = <arpa/inet.h>
 NEXT_AS_FIRST_DIRECTIVE_ERRNO_H = 
@@ -1130,10 +1130,10 @@ am__quote =
 am__tar = $${TAR-tar} chof - "$$tardir"
 am__untar = $${TAR-tar} xf -
 bindir = ${exec_prefix}/bin
-build = x86_64-apple-darwin13.0.0
+build = x86_64-apple-darwin13.1.0
 build_alias = 
 build_cpu = x86_64
-build_os = darwin13.0.0
+build_os = darwin13.1.0
 build_vendor = apple
 builddir = .
 datadir = ${datarootdir}
@@ -1146,10 +1146,10 @@ gl_LTLIBOBJS =  asnprintf.lo error.lo futimens.lo getopt.lo getopt1.lo getpass.l
 gltests_LIBOBJS = 
 gltests_LTLIBOBJS = 
 gltests_WITNESS = IN_WGET_GNULIB_TESTS
-host = x86_64-apple-darwin13.0.0
+host = x86_64-apple-darwin13.1.0
 host_alias = 
 host_cpu = x86_64
-host_os = darwin13.0.0
+host_os = darwin13.1.0
 host_vendor = apple
 htmldir = ${docdir}
 includedir = ${prefix}/include
